--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -764,6 +764,16 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="15" column="3">
+             <widget class="QLabel" name="label_63">
+              <property name="toolTip">
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Terminals can be selected / deselected by left clicking atoms. Regions A and B can likewise be selected / deselected by right and middle clicking respectively.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              </property>
+              <property name="text">
+               <string>(?)</string>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
          </widget>
