--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -246,7 +246,7 @@ p, li { white-space: pre-wrap; }
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>5</number>
       </property>
       <property name="iconSize">
        <size>
@@ -825,7 +825,7 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>340</width>
+             <width>259</width>
              <height>833</height>
             </rect>
            </property>
@@ -1186,8 +1186,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>357</width>
-             <height>832</height>
+             <width>273</width>
+             <height>647</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_9">
@@ -1645,8 +1645,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>357</width>
-             <height>832</height>
+             <width>275</width>
+             <height>610</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_13">
@@ -2730,17 +2730,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_36">
-              <property name="text">
-               <string>Select graphs:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QComboBox" name="graphComboBox"/>
-            </item>
-            <item row="8" column="0">
+            <item row="11" column="0">
              <spacer name="verticalSpacer_8">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -2756,16 +2746,10 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="4" column="0">
-             <widget class="Line" name="line_18">
-              <property name="frameShadow">
-               <enum>QFrame::Raised</enum>
-              </property>
-              <property name="lineWidth">
-               <number>5</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
+            <item row="8" column="0">
+             <widget class="QLabel" name="label_56">
+              <property name="text">
+               <string>Energy vs. Gamma vs. Transmission Graph:</string>
               </property>
              </widget>
             </item>
@@ -2785,24 +2769,70 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="5" column="0">
-             <widget class="QLabel" name="label_56">
-              <property name="text">
-               <string>Energy vs. Gamma vs. Transmission Graph:</string>
+            <item row="2" column="0">
+             <widget class="QComboBox" name="graphComboBox"/>
+            </item>
+            <item row="7" column="0">
+             <widget class="Line" name="line_18">
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <property name="lineWidth">
+               <number>5</number>
+              </property>
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
               </property>
              </widget>
             </item>
-            <item row="6" column="0">
+            <item row="9" column="0">
              <widget class="QLabel" name="label_55">
               <property name="text">
                <string>Save 3D Graph to image:</string>
               </property>
              </widget>
             </item>
-            <item row="7" column="0">
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_36">
+              <property name="text">
+               <string>Select graphs:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="0">
              <widget class="QPushButton" name="save3DImageButton">
               <property name="text">
                <string>Save image</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QLabel" name="label_64">
+              <property name="text">
+               <string>Set chemical potential offset:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="0">
+             <spacer name="verticalSpacer_33">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="5" column="0">
+             <widget class="QLineEdit" name="offsetLineEdit">
+              <property name="text">
+               <string>0</string>
               </property>
              </widget>
             </item>
