--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -826,28 +826,28 @@ p, li { white-space: pre-wrap; }
              <x>0</x>
              <y>0</y>
              <width>340</width>
-             <height>833</height>
+             <height>882</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout_17">
-            <item row="28" column="0">
-             <widget class="QLineEdit" name="gammaStartLineEdit">
+            <item row="36" column="0">
+             <widget class="QLineEdit" name="gammaStepsLineEdit">
               <property name="text">
-               <string>0</string>
+               <string>11</string>
               </property>
              </widget>
             </item>
-            <item row="31" column="0">
+            <item row="33" column="0">
              <widget class="QLineEdit" name="gammaEndLineEdit">
               <property name="text">
                <string>2</string>
               </property>
              </widget>
             </item>
-            <item row="34" column="0">
-             <widget class="QLineEdit" name="gammaStepsLineEdit">
+            <item row="30" column="0">
+             <widget class="QLineEdit" name="gammaStartLineEdit">
               <property name="text">
-               <string>11</string>
+               <string>0</string>
               </property>
              </widget>
             </item>
@@ -868,10 +868,13 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
-             <widget class="QLineEdit" name="openWfFileLineEdit">
-              <property name="readOnly">
-               <bool>false</bool>
+            <item row="2" column="0">
+             <widget class="QLineEdit" name="openOutFileLineEdit"/>
+            </item>
+            <item row="3" column="0">
+             <widget class="QLabel" name="label_43">
+              <property name="text">
+               <string>Select or enter path of .wf file:</string>
               </property>
              </widget>
             </item>
@@ -882,20 +885,17 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="3" column="0">
-             <widget class="QLabel" name="label_43">
-              <property name="text">
-               <string>Select or enter path of .wf file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLineEdit" name="openOutFileLineEdit"/>
-            </item>
             <item row="9" column="0">
              <widget class="QLabel" name="label_5">
               <property name="text">
                <string>Select or enter path of .csv file:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QLineEdit" name="openWfFileLineEdit">
+              <property name="readOnly">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -915,16 +915,6 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="10" column="0">
-             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
-            </item>
-            <item row="5" column="0">
-             <widget class="QPushButton" name="executeLoadedButton">
-              <property name="text">
-               <string>Execute</string>
-              </property>
-             </widget>
-            </item>
             <item row="7" column="0" colspan="3">
              <widget class="Line" name="line_7">
               <property name="frameShadow">
@@ -938,6 +928,13 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="5" column="0">
+             <widget class="QPushButton" name="executeLoadedButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
             <item row="8" column="0" colspan="2">
              <widget class="QLabel" name="label_42">
               <property name="text">
@@ -945,14 +942,17 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="14" column="0" colspan="2">
+            <item row="16" column="0" colspan="2">
              <widget class="QLabel" name="label_46">
               <property name="text">
                <string>To view current vs. bias, load a .out directory:</string>
               </property>
              </widget>
             </item>
-            <item row="13" column="0" colspan="3">
+            <item row="10" column="0">
+             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
+            </item>
+            <item row="15" column="0" colspan="3">
              <widget class="Line" name="line_6">
               <property name="frameShadow">
                <enum>QFrame::Raised</enum>
@@ -965,14 +965,21 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="11" column="0">
+            <item row="18" column="0">
+             <widget class="QPushButton" name="currExecuteLoadedButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0">
              <widget class="QPushButton" name="transExecuteLoadedButton">
               <property name="text">
                <string>Execute</string>
               </property>
              </widget>
             </item>
-            <item row="12" column="0">
+            <item row="14" column="0">
              <spacer name="verticalSpacer_15">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -988,17 +995,10 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="15" column="0">
+            <item row="17" column="0">
              <widget class="QLineEdit" name="openDirLineEdit"/>
             </item>
-            <item row="16" column="0">
-             <widget class="QPushButton" name="currExecuteLoadedButton">
-              <property name="text">
-               <string>Execute</string>
-              </property>
-             </widget>
-            </item>
-            <item row="17" column="0">
+            <item row="19" column="0">
              <spacer name="verticalSpacer_30">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -1014,7 +1014,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="19" column="0" colspan="2">
+            <item row="21" column="0" colspan="2">
              <widget class="QLabel" name="label_49">
               <property name="text">
                <string>To plot gamma vs. energy vs. transmission:</string>
@@ -1022,13 +1022,13 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item row="22" column="0">
-             <widget class="QPushButton" name="gammaExecuteLoadedButton">
+             <widget class="QLabel" name="label_50">
               <property name="text">
-               <string>Execute</string>
+               <string>Load .csv directory</string>
               </property>
              </widget>
             </item>
-            <item row="23" column="0">
+            <item row="25" column="0">
              <spacer name="verticalSpacer_31">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -1044,14 +1044,21 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="24" column="0" colspan="2">
+            <item row="26" column="0" colspan="2">
              <widget class="QLabel" name="label_51">
               <property name="text">
                <string>Alternatively generate from displayed molecule:</string>
               </property>
              </widget>
             </item>
-            <item row="18" column="0" colspan="3">
+            <item row="24" column="0">
+             <widget class="QPushButton" name="gammaExecuteLoadedButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="20" column="0" colspan="3">
              <widget class="Line" name="line_23">
               <property name="frameShadow">
                <enum>QFrame::Raised</enum>
@@ -1064,38 +1071,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="20" column="0">
-             <widget class="QLabel" name="label_50">
-              <property name="text">
-               <string>Load .csv directory</string>
-              </property>
-             </widget>
-            </item>
-            <item row="21" column="0">
-             <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
-            </item>
-            <item row="29" column="0">
-             <widget class="QLabel" name="label_53">
-              <property name="text">
-               <string>Gamma maximum:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="32" column="0">
-             <widget class="QLabel" name="label_54">
-              <property name="text">
-               <string>Number of steps</string>
-              </property>
-             </widget>
-            </item>
-            <item row="35" column="0">
-             <widget class="QPushButton" name="execute3DGraphButton">
-              <property name="text">
-               <string>Execute</string>
-              </property>
-             </widget>
-            </item>
-            <item row="36" column="0">
+            <item row="38" column="0">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -1108,10 +1084,55 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
+            <item row="34" column="0">
+             <widget class="QLabel" name="label_54">
+              <property name="text">
+               <string>Number of steps</string>
+              </property>
+             </widget>
+            </item>
+            <item row="31" column="0">
+             <widget class="QLabel" name="label_53">
+              <property name="text">
+               <string>Gamma maximum:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="37" column="0">
+             <widget class="QPushButton" name="execute3DGraphButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="23" column="0">
+             <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
+            </item>
             <item row="10" column="1">
              <widget class="QPushButton" name="openCsvFileButton">
               <property name="text">
                <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="17" column="1">
+             <widget class="QPushButton" name="openDirButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="23" column="1">
+             <widget class="QPushButton" name="openDirGammaButton">
+              <property name="text">
+               <string>Open</string>
+              </property>
+             </widget>
+            </item>
+            <item row="27" column="0">
+             <widget class="QLabel" name="label_52">
+              <property name="text">
+               <string>Gamma minimum:</string>
               </property>
              </widget>
             </item>
@@ -1125,24 +1146,20 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="15" column="1">
-             <widget class="QPushButton" name="openDirButton">
+            <item row="11" column="0">
+             <widget class="QLabel" name="label_65">
               <property name="text">
-               <string>Open</string>
+               <string>Select or enter path of .out file:</string>
               </property>
              </widget>
             </item>
-            <item row="21" column="1">
-             <widget class="QPushButton" name="openDirGammaButton">
+            <item row="12" column="0">
+             <widget class="QLineEdit" name="openOutFileLineEdit2"/>
+            </item>
+            <item row="12" column="1">
+             <widget class="QPushButton" name="openOutFileButton2">
               <property name="text">
                <string>Open</string>
-              </property>
-             </widget>
-            </item>
-            <item row="25" column="0">
-             <widget class="QLabel" name="label_52">
-              <property name="text">
-               <string>Gamma minimum:</string>
               </property>
              </widget>
             </item>
