--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -299,7 +299,7 @@ p, li { white-space: pre-wrap; }
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>-22</y>
+             <y>0</y>
              <width>357</width>
              <height>818</height>
             </rect>
@@ -816,8 +816,6 @@ p, li { white-space: pre-wrap; }
          </widget>
         </item>
        </layout>
-       <zorder>label_2</zorder>
-       <zorder>scrollArea</zorder>
       </widget>
       <widget class="QWidget" name="loadFilesTab">
        <attribute name="title">
@@ -1060,7 +1058,7 @@ p, li { white-space: pre-wrap; }
             <item row="22" column="0">
              <widget class="QLabel" name="label_50">
               <property name="text">
-               <string>Load .csv directory:</string>
+               <string>Load a .csv directory:</string>
               </property>
              </widget>
             </item>
@@ -1148,7 +1146,7 @@ p, li { white-space: pre-wrap; }
             <item row="11" column="0">
              <widget class="QLabel" name="label_65">
               <property name="text">
-               <string>Select or enter path of .out file:</string>
+               <string>Optionally load .out file for offset:</string>
               </property>
              </widget>
             </item>
@@ -1219,7 +1217,7 @@ p, li { white-space: pre-wrap; }
             <item row="8" column="0" colspan="2">
              <widget class="QLabel" name="label_42">
               <property name="text">
-               <string>To view transmission graphs, load a .csv and .out file:</string>
+               <string>To view transmission graphs, load a .csv file:</string>
               </property>
              </widget>
             </item>
